fix: overflow

--- a/static/style.css
+++ b/static/style.css
@@ -26,7 +26,7 @@
 
 body {
     margin: 0;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 h1 {
